DRAKEN-4381: Fix review comments
